--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ install:
 
   script:
     - npm ci
-    - $(npm bin)/print-env CI
+    # - $(npm bin)/print-env CI
     - npm run cy:verify
 
 # all jobs that actually run tests can use the same definition
@@ -34,7 +34,7 @@ install:
   stage: test
   script:
     # print CI environment variables for reference
-    - $(npm bin)/print-env CI
+    # - $(npm bin)/print-env CI
     # start the server in the background
     - npm run start:ci &
     # run Cypress test in load balancing mode
