--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ install:
   script:
     - npm ci
     # - $(npm bin)/print-env CI
-    - npm run cy:verify
+    # - npm run cy:verify
 
 # all jobs that actually run tests can use the same definition
 .job_template: &job
@@ -49,13 +49,13 @@ install:
 
 # actual job definitions
 # all steps are the same, they come from the template above
-electrons-1:
-  <<: *job
-electrons-2:
-  <<: *job
-electrons-3:
-  <<: *job
-electrons-4:
-  <<: *job
-electrons-5:
-  <<: *job
+# electrons-1:
+#   <<: *job
+# electrons-2:
+#   <<: *job
+# electrons-3:
+#   <<: *job
+# electrons-4:
+#   <<: *job
+# electrons-5:
+#   <<: *job
