--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,29 +1,62 @@
-image: cypress/base:10
+# Docker images provided by https://github.com/cypress-io/cypress-docker-images
 
+# first, install Cypress, then run all tests (in parallel)
 stages:
-  - install
+  - build
   - test
 
+# to cache both npm modules and Cypress binary we use environment variables
+# to point at the folders we can list as paths in "cache" job settings
+variables:
+  npm_config_cache: /builds/cypress-io/cypress/.npm
+  CYPRESS_CACHE_FOLDER: /builds/cypress-io/cypress/cache/Cypress
+
+# cache using branch name
+# https://gitlab.com/help/ci/caching/index.md
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
+    - .npm
     - cache/Cypress
     - node_modules
 
+# this job installs NPM dependencies and Cypress
 install:
-  stage: install
+  image: cypress/base:10
+  stage: build
+
   script:
     - npm ci
+    # show where the Cypress test runner binaries are cached
+    - $(npm bin)/cypress cache path
+    # show all installed versions of Cypress binary
+    - $(npm bin)/cypress cache list
+    - $(npm bin)/cypress verify
 
-test:
+# two jobs that run after "install" job finishes
+# NPM dependencies and Cypress binary should be already installed
+cypress-e2e:
+  image: cypress/base:10
   stage: test
   script:
-    - npm run test
-    
+    - $(npm bin)/cypress run
   artifacts:
+    expire_in: 1 week
     when: always
     paths:
-      - cypress/videos/**/*.mp4
-      - cypress/screenshots/**/*.png
-      - cypress/results/
-    expire_in: 1 day
+    - cypress/screenshots
+    - cypress/videos
+    - cypress/results
+
+cypress-e2e-chrome:
+  image: cypress/browsers:chrome67
+  stage: test
+  script:
+    - $(npm bin)/cypress run --browser chrome
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+    - cypress/screenshots
+    - cypress/videos
+    - cypress/results
