Adding Mystake Tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
             "dom"
         ],
         "types": [
-            "cypress"
+            "cypress",
+            "node"
         ]
     },
     "include": [
