--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cypress open",
-    "test": "cypress run",
+    "test": "cypress run --browser chrome",
     "update": "npm i cypress@latest typescript@latest ts-loader@latest webpack@latest @cypress/webpack-preprocessor@latest -S -E"
   },
   "repository": {
@@ -25,14 +25,17 @@
   "dependencies": {
     "@cypress/webpack-preprocessor": "4.1.0",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.6",
     "cypress": "3.4.0",
+    "fs": "0.0.1-security",
     "ts-loader": "6.0.4",
     "typescript": "3.5.3",
-    "webpack": "4.35.3"
+    "webpack": "4.38.0"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
     "cypress-multi-reporters": "^1.1.23",
+    "cypress-xpath": "^1.4.0",
+    "mocha": "^5.2.0",
     "mocha-junit-reporters": "^1.23.6",
     "mochawesome": "^4.0.1",
     "mochawesome-merge": "^2.0.1",
